--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -5,6 +5,7 @@ CAD.provider=
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x10D19CE4
 KeepUserPlacement=false
@@ -14,28 +15,35 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=I2C1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP4=SPI3
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SYS_VS_tim1
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA14 (JTCK-SWCLK)
+Mcu.Pin11=PC10
+Mcu.Pin12=PC11
+Mcu.Pin13=PC12
+Mcu.Pin14=PB3 (JTDO-TRACESWO)
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin19=VP_SYS_VS_tim1
 Mcu.Pin2=PH0-OSC_IN (PH0)
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PA13 (JTMS-SWDIO)
-Mcu.Pin7=PA14 (JTCK-SWCLK)
-Mcu.Pin8=PB3 (JTDO-TRACESWO)
-Mcu.Pin9=PB5
-Mcu.PinsNb=15
+Mcu.Pin6=PC6
+Mcu.Pin7=PC7
+Mcu.Pin8=PC8
+Mcu.Pin9=PA13 (JTMS-SWDIO)
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -96,12 +104,30 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC10.Mode=Full_Duplex_Master
+PC10.Signal=SPI3_SCK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=SPI3_MISO
+PC12.Mode=Full_Duplex_Master
+PC12.Signal=SPI3_MOSI
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=SH1107_SLAVE_SELECT
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=SH1107_CONTROL
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=SH1107_RESET
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -139,7 +165,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -195,6 +221,12 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SPI3.CalculateBaudRate=40.0 MBits/s
+SPI3.DataSize=SPI_DATASIZE_8BIT
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=AutoReloadPreload
 USART2.IPParameters=VirtualMode-Asynchronous
