--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -54,7 +54,7 @@ Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.13.0
+MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
@@ -242,7 +242,8 @@ TIM2.IPParameters=AutoReloadPreload,Period
 TIM2.Period=799999
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation2 CH2,AutoReloadPreload
+TIM3.IPParameters=Channel-PWM Generation2 CH2,AutoReloadPreload,Period
+TIM3.Period=49999
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
