--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -54,23 +54,26 @@ Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
-NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false\:false
+NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
@@ -83,14 +86,14 @@ PA14\ (JTCK-SWCLK).GPIO_Label=TCK
 PA14\ (JTCK-SWCLK).Locked=true
 PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_PuPd
+PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_PuPd
+PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=USART_RX
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -238,17 +241,19 @@ RCC.USART3Freq_Value=80000000
 RCC.USBFreq_Value=16000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=2000000
+RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
-RCC.VCOSAI1OutputFreq_Value=96000000
+RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SPI1.CalculateBaudRate=40.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CalculateBaudRate=625.0 KBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -273,3 +278,4 @@ VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
